# linker

./: .mcp.json  CLAUDE.md  LICENSE  README.md  index.js  linker.py  package.json  pyproject.toml
.claude-plugin/: plugin.json
adapters/: filewatch.js  openai.js
linker_mcp/: __init__.py  main.py
rules/: AGENT.md
