[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "linker-mcp"
version = "1.0.0"
description = "Bridge multiple Claude Code instances — share context, messages, Q&A across sessions"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "nautilux", email = "nautilux@outlook.com" }]

[project.scripts]
linker-mcp = "linker_mcp:main"

[tool.setuptools.packages.find]
where = ["."]
